# inkblot

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
cmake/: dependencies.cmake  project_options.cmake  sanitizers.cmake  warnings.cmake
code/: CMakeLists.txt
code/app/: CMakeLists.txt
code/app/source/: CMakeLists.txt  main.cpp
code/inkblot/: CMakeLists.txt
code/inkblot/include/inkblot/: example.hpp  multi_array.hpp
code/inkblot/include/inkblot/basic/: arena.hpp  error.hpp  formatter.hpp  logging.hpp  match.hpp  multi_array.hpp  rvo.hpp  unique_handle.hpp
code/inkblot/include/inkblot/gfx/: renderer.hpp
code/inkblot/include/inkblot/math/: vector.hpp
code/inkblot/include/inkblot/os/: memory.hpp  thread.hpp  thread_id.hpp  window.hpp
code/inkblot/include/inkblot/profile/: memory.hpp
code/inkblot/source/: CMakeLists.txt  example.cpp
code/inkblot/source/basic/: CMakeLists.txt  arena.cpp  logging.cpp
code/inkblot/source/gfx/: CMakeLists.txt  renderer.cpp
code/inkblot/source/gfx/vulkan/: CMakeLists.txt  vulkan.hpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_platform.hpp  vulkan_platform_win32.cpp  vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp
code/inkblot/source/os/: CMakeLists.txt
code/inkblot/source/os/win32/: CMakeLists.txt  memory.cpp  thread.cpp  thread_id.cpp  win32.hpp  window.cpp
code/inkblot/source/profile/: CMakeLists.txt  contracts.cpp  memory.cpp
code/tests/: CMakeLists.txt
code/tests/source/: CMakeLists.txt  basic_arena_tests.cpp  math_vector_tests.cpp
